# f1-piston

./: .gitignore  Dockerfile  Makefile  Procfile  README.md  README.rst  build.sh  f1-piston.code-workspace  pyproject.toml  requirements.txt
f1_piston/: Gear_Shift_Visualization.py  f1.py  main.py
f1_piston/doc_cache/2021/2021-07-04_Austrian_Grand_Prix/2021-07-03_Qualifying/: timing_app_data.ff1pkl  timing_data.ff1pkl
f1_piston/pages/: Qualifying_Results.py  plot_qualifying_results.py
terraform/: .terraform.lock.hcl  main.tf  provider.tf
tests/: test_f1_piston.py
