[tool.poetry]
name = "f1-piston"
version = "0.1.0"
description = ""
authors = ["alexraskin <alexraskin@fastmail.fm>"]

[tool.poetry.dependencies]
python = "^3.10"
fastf1 = "^2.3.0"
streamlit = "^1.13.0"
watchdog = "^2.1.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
